# git-ai-sync

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/git_ai_sync/: __init__.py  __main__.py  config.py  conflict_resolver.py  file_watcher.py  git_operations.py  logging_setup.py
tests/: conftest.py  test_config.py  test_conflict_resolver.py  test_file_watcher.py  test_git_operations.py  test_logging_setup.py  test_main.py  test_no_print.py  test_version.py
